# RBP-RELI

./: .gitignore  Dockerfile.cpp  Dockerfile.gpu  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
RELI/src/: RELI_impl.cpp
reli_turbo/: __init__.py  __main__.py  cli.py  io.py  kernels.py  reli.py  stats.py
scripts/: build_null_model.py  extract_inputs.py  extract_inputs_database.py  extract_inputs_deseq2.py  parse_results.py  plot_figure.py  plot_lollipop.py  reli_utils.py  run_reli.py  run_reli.sh
